# CodeReviewAITool

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/api/: app.py
src/services/: data_structures.py  github_fetcher.py  gpt_code_analyzer.py
tests/: test_app.py  test_github_fetcher.py
