[tool.poetry]
name = "requirements"
version = "0.1.0"
description = ""
authors = ["sayrekas <chaotichoice@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.52.0"
pygithub = "^2.4.0"
loguru = "^0.7.2"
fastapi = "^0.115.2"
pydantic = "^2.9.2"
uvicorn = "^0.32.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
